--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
-mongo:
-  restart: always
- image: mongo:latest
- container_name: "mongodb"
- environment:
-  - MONGODB_USERNAME=test
-  - MONGODB_PASSWORD=test123
-  - MONGODB_DATABASE=Enron
-volumes:
-  - ./data/db:/var/micro-data/mongodb/data/db
-ports:
-  - 27017:27017
-command: db.createCollection(“teachers”)
+version: '3.8'
+
+services:
+  mongo:
+   restart: always
+   image: mongo:latest
+   container_name: "mongodb"
+   environment:
+    - MONGODB_USERNAME=test
+    - MONGODB_PASSWORD=test123
+    - MONGODB_DATABASE=Enron
+   volumes:
+    - ./data/db:/var/micro-data/mongodb/data/db
+   ports:
+    - 27017:27017
+   command: db.createCollection(“teachers”)
